brute force on caesars cipher

--- a/notebooks/caesars_cipher.ipynb
+++ b/notebooks/caesars_cipher.ipynb
@@ -189,6 +189,68 @@
     "collapsed": false
    },
    "id": "d7af139622786463"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BRX DUH DZHVRPH\n",
+      "CSY EVI EAIWSQI\n",
+      "DTZ FWJ FBJXTRJ\n",
+      "EUA GXK GCKYUSK\n",
+      "FVB HYL HDLZVTL\n",
+      "GWC IZM IEMAWUM\n",
+      "HXD JAN JFNBXVN\n",
+      "IYE KBO KGOCYWO\n",
+      "JZF LCP LHPDZXP\n",
+      "KAG MDQ MIQEAYQ\n",
+      "LBH NER NJRFBZR\n",
+      "MCI OFS OKSGCAS\n",
+      "NDJ PGT PLTHDBT\n",
+      "OEK QHU QMUIECU\n",
+      "PFL RIV RNVJFDV\n",
+      "QGM SJW SOWKGEW\n",
+      "RHN TKX TPXLHFX\n",
+      "SIO ULY UQYMIGY\n",
+      "TJP VMZ VRZNJHZ\n",
+      "UKQ WNA WSAOKIA\n",
+      "VLR XOB XTBPLJB\n",
+      "WMS YPC YUCQMKC\n",
+      "XNT ZQD ZVDRNLD\n",
+      "YOU ARE AWESOME\n",
+      "ZPV BSF BXFTPNF\n",
+      "AQW CTG CYGUQOG\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Brute Force Attack\n",
+    "for i in range(26):\n",
+    "    key = generate_key(i, letters)\n",
+    "    decrypted_message = encrypt(key, encrypted_message)\n",
+    "    print(decrypted_message)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-06T20:16:30.583995Z",
+     "start_time": "2024-01-06T20:16:30.579851Z"
+    }
+   },
+   "id": "eb5de7dda954cf51",
+   "execution_count": 10
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e4f812bfd03ccc97"
   }
  ],
  "metadata": {
