attempt at debug notebook for git commits

--- a/notebooks/caesars_cipher.ipynb
+++ b/notebooks/caesars_cipher.ipynb
@@ -197,51 +197,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BRX DUH DZHVRPH\n",
-      "CSY EVI EAIWSQI\n",
-      "DTZ FWJ FBJXTRJ\n",
-      "EUA GXK GCKYUSK\n",
-      "FVB HYL HDLZVTL\n",
-      "GWC IZM IEMAWUM\n",
-      "HXD JAN JFNBXVN\n",
-      "IYE KBO KGOCYWO\n",
-      "JZF LCP LHPDZXP\n",
-      "KAG MDQ MIQEAYQ\n",
-      "LBH NER NJRFBZR\n",
-      "MCI OFS OKSGCAS\n",
-      "NDJ PGT PLTHDBT\n",
-      "OEK QHU QMUIECU\n",
-      "PFL RIV RNVJFDV\n",
-      "QGM SJW SOWKGEW\n",
-      "RHN TKX TPXLHFX\n",
-      "SIO ULY UQYMIGY\n",
-      "TJP VMZ VRZNJHZ\n",
-      "UKQ WNA WSAOKIA\n",
-      "VLR XOB XTBPLJB\n",
-      "WMS YPC YUCQMKC\n",
-      "XNT ZQD ZVDRNLD\n",
-      "YOU ARE AWESOME\n",
-      "ZPV BSF BXFTPNF\n",
-      "AQW CTG CYGUQOG\n"
+      "['BRX DUH DZHVRPH', 'CSY EVI EAIWSQI', 'DTZ FWJ FBJXTRJ', 'EUA GXK GCKYUSK', 'FVB HYL HDLZVTL', 'GWC IZM IEMAWUM', 'HXD JAN JFNBXVN', 'IYE KBO KGOCYWO', 'JZF LCP LHPDZXP', 'KAG MDQ MIQEAYQ', 'LBH NER NJRFBZR', 'MCI OFS OKSGCAS', 'NDJ PGT PLTHDBT', 'OEK QHU QMUIECU', 'PFL RIV RNVJFDV', 'QGM SJW SOWKGEW', 'RHN TKX TPXLHFX', 'SIO ULY UQYMIGY', 'TJP VMZ VRZNJHZ', 'UKQ WNA WSAOKIA', 'VLR XOB XTBPLJB', 'WMS YPC YUCQMKC', 'XNT ZQD ZVDRNLD', 'YOU ARE AWESOME', 'ZPV BSF BXFTPNF', 'AQW CTG CYGUQOG']\n"
      ]
     }
    ],
    "source": [
     "# Brute Force Attack\n",
-    "for i in range(26):\n",
-    "    key = generate_key(i, letters)\n",
-    "    decrypted_message = encrypt(key, encrypted_message)\n",
-    "    print(decrypted_message)"
+    "def brute_force_attack(encrypted_message: str):\n",
+    "    decrypts: [str] = []\n",
+    "    for i in range(26):\n",
+    "        key = generate_key(i, letters)\n",
+    "        decrypts.append(encrypt(key, encrypted_message))\n",
+    "    return decrypts\n",
+    "\n",
+    "decrypts = brute_force_attack(encrypted_message)\n",
+    "print(decrypts)\n",
+    "        "
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T20:21:09.447211Z",
-     "start_time": "2024-01-06T20:21:09.445082Z"
+     "end_time": "2024-01-06T20:27:02.638493Z",
+     "start_time": "2024-01-06T20:27:02.634484Z"
     }
    },
    "id": "eb5de7dda954cf51",
-   "execution_count": 6
+   "execution_count": 8
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-06T20:27:16.387959Z",
+     "start_time": "2024-01-06T20:27:16.382713Z"
+    }
+   },
+   "id": "e4f812bfd03ccc97",
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -250,7 +245,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "e4f812bfd03ccc97"
+   "id": "3d6b0e9873cbf472"
   }
  ],
  "metadata": {
