complete core functionality of diffie-hellman

--- a/notebooks/DiffieHellman.ipynb
+++ b/notebooks/DiffieHellman.ipynb
@@ -37,8 +37,8 @@
       "True\n",
       "True\n",
       "False\n",
-      "1229\n",
-      "17183\n"
+      "1423\n",
+      "19483\n"
      ]
     }
    ],
@@ -70,11 +70,92 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-07T15:59:08.700235Z",
-     "start_time": "2024-01-07T15:59:08.697369Z"
+     "end_time": "2024-01-07T17:21:41.299892Z",
+     "start_time": "2024-01-07T17:21:41.296168Z"
     }
    },
    "id": "d024beb15f8e9c00",
+   "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Implement prime generators\n",
+    "\n",
+    "def is_generator(g, p):\n",
+    "    for i in range(1, p-1):\n",
+    "        if (g**i) % p == 1:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "    \n",
+    "\n",
+    "def get_generator(p: int):\n",
+    "    for g in range(2, p):\n",
+    "        if is_generator(g, p):\n",
+    "            return g"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-07T17:21:44.287076Z",
+     "start_time": "2024-01-07T17:21:44.282792Z"
+    }
+   },
+   "id": "744bf5ffba612be1",
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1433 3\n",
+      "Alice: g_a ->  1088\n",
+      "Bob: g_b ->  1067\n",
+      "Alice g_ab ->  1159\n",
+      "Bob g_ba ->  1159\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Diffie-Hellman\n",
+    "\n",
+    "p = get_prime(1000)\n",
+    "g = get_generator(p)\n",
+    "print(p, g)\n",
+    "\n",
+    "# Alice\n",
+    "a = random.randrange(0, p)\n",
+    "g_a = (g**a) % p\n",
+    "# Alice send this out in public\n",
+    "print(\"Alice: g_a -> \", g_a)\n",
+    "\n",
+    "# Bob\n",
+    "b = random.randrange(0, p)\n",
+    "g_b = (g**b) % p\n",
+    "# Bob sends this out in the public\n",
+    "print(\"Bob: g_b -> \", g_b)\n",
+    "\n",
+    "# Back to Alice\n",
+    "g_ab = (g_b**a) % p\n",
+    "print(\"Alice g_ab -> \", g_ab)\n",
+    "\n",
+    "# Back to Bob\n",
+    "g_ba = (g_a**b) % p\n",
+    "print(\"Bob g_ba -> \", g_ba)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-07T17:21:47.648398Z",
+     "start_time": "2024-01-07T17:21:47.645270Z"
+    }
+   },
+   "id": "f5aab2e5fdeb2152",
    "execution_count": 5
   },
   {
@@ -84,7 +165,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "744bf5ffba612be1"
+   "id": "e82e22eb0783232b"
   }
  ],
  "metadata": {
