--- a/notebooks/EllipticCurveCryptography.ipynb
+++ b/notebooks/EllipticCurveCryptography.ipynb
@@ -60,11 +60,62 @@
   {
    "cell_type": "code",
    "outputs": [],
+   "source": [
+    "# A Simple implementation of Elliptic Curve Cryptography\n",
+    "\n",
+    "# A Point on the Curve\n",
+    "class Point:\n",
+    "    def __init__(self, x: int, y: int):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"({self.x}  -   {self.y})\"\n",
+    "    \n",
+    "    \n",
+    "class SimpleEllipticCurve:\n",
+    "    def __init__(self, a: int, b: int):\n",
+    "        # y^2 = x^3 + ax + b\n",
+    "        # Bitcoin - a = 0, b = 7 (y^2 = x^3 + 7)\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "    \n",
+    "    # Naive Point Addition\n",
+    "    def point_addition(self, P: Point, Q: Point):\n",
+    "        x1, y1 = P.x, P.y\n",
+    "        x2, y2 = Q.x, Q.y\n",
+    "        \n",
+    "        if x1 == x2 and y1 == y2:\n",
+    "            # Point Doubling\n",
+    "            m = (3 * x1**2 + self.a) / (2 * y1)\n",
+    "        else:\n",
+    "            # Point Addition\n",
+    "            m = (y2 - y1) / (x2 - x1)\n",
+    "            \n",
+    "        x3 = m**2 - x1 - x2\n",
+    "        y3 = m * (x1 - x3) - y1\n",
+    "        \n",
+    "        return Point(x3, y3)\n",
+    "    \n",
+    "    \n",
+    "print(SimpleEllipticCurve(0, 7).point_addition(Point(2, 5), Point(2, 5)))\n",
+    "    \n",
+    "    "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f2a31882d2c77522",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "f2a31882d2c77522"
+   "id": "da5ad2b80f2f4c9c"
   }
  ],
  "metadata": {
