update README and clean nbformat errors

--- a/notebooks/EllipticCurveCryptography.ipynb
+++ b/notebooks/EllipticCurveCryptography.ipynb
@@ -59,7 +59,15 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-2.56  -   0.4720000000000004)\n"
+     ]
+    }
+   ],
    "source": [
     "# A Simple implementation of Elliptic Curve Cryptography\n",
     "\n",
@@ -103,19 +111,28 @@
     "    "
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-08T01:24:55.470989Z",
+     "start_time": "2024-01-08T01:24:55.468093Z"
+    }
    },
    "id": "f2a31882d2c77522",
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-08T01:24:55.473398Z",
+     "start_time": "2024-01-08T01:24:55.471628Z"
+    }
    },
-   "id": "da5ad2b80f2f4c9c"
+   "id": "da5ad2b80f2f4c9c",
+   "execution_count": 1
   }
  ],
  "metadata": {
