--- a/notebooks/ModArithmeticAndDiffieHellman.ipynb
+++ b/notebooks/ModArithmeticAndDiffieHellman.ipynb
@@ -35,12 +35,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "True\n",
-      "True\n",
       "False\n",
-      "1423\n",
-      "19483\n"
+      "True\n",
+      "True\n",
+      "False\n"
      ]
     }
    ],
@@ -71,12 +69,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-07T17:21:41.299892Z",
-     "start_time": "2024-01-07T17:21:41.296168Z"
+     "end_time": "2024-01-08T01:25:14.114117Z",
+     "start_time": "2024-01-08T01:25:14.104164Z"
     }
    },
    "id": "d024beb15f8e9c00",
-   "execution_count": 3
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -108,7 +106,15 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# Fermat's Algorithm \n",
     "import random\n",
@@ -132,26 +138,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-07T21:19:02.916864Z",
-     "start_time": "2024-01-07T21:19:02.914804Z"
+     "end_time": "2024-01-08T01:25:14.116174Z",
+     "start_time": "2024-01-08T01:25:14.107707Z"
     }
    },
    "id": "851900ab84140b67",
-   "execution_count": 7
+   "execution_count": 9
   },
   {
    "cell_type": "code",
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'naive_is_prime' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[6], line 9\u001B[0m\n\u001B[1;32m      6\u001B[0m         \u001B[38;5;28;01mif\u001B[39;00m naive_is_prime(p):\n\u001B[1;32m      7\u001B[0m             \u001B[38;5;28;01mreturn\u001B[39;00m p\n\u001B[0;32m----> 9\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43mget_prime\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m1000\u001B[39;49m\u001B[43m)\u001B[49m)\n\u001B[1;32m     10\u001B[0m \u001B[38;5;28mprint\u001B[39m(get_prime(\u001B[38;5;241m10000\u001B[39m))\n\u001B[1;32m     12\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mis_generator\u001B[39m(g, p):\n",
-      "Cell \u001B[0;32mIn[6], line 6\u001B[0m, in \u001B[0;36mget_prime\u001B[0;34m(size)\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[1;32m      5\u001B[0m     p \u001B[38;5;241m=\u001B[39m random\u001B[38;5;241m.\u001B[39mrandrange(size, \u001B[38;5;241m2\u001B[39m\u001B[38;5;241m*\u001B[39msize)\n\u001B[0;32m----> 6\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[43mnaive_is_prime\u001B[49m(p):\n\u001B[1;32m      7\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m p\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'naive_is_prime' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1877\n",
+      "11551\n"
      ]
     }
    ],
@@ -184,12 +186,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-07T20:39:31.748178Z",
-     "start_time": "2024-01-07T20:39:31.726943Z"
+     "end_time": "2024-01-08T01:25:14.116265Z",
+     "start_time": "2024-01-08T01:25:14.109889Z"
     }
    },
    "id": "744bf5ffba612be1",
-   "execution_count": 6
+   "execution_count": 10
   },
   {
    "cell_type": "code",
@@ -198,11 +200,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1433 3\n",
-      "Alice: g_a ->  1088\n",
-      "Bob: g_b ->  1067\n",
-      "Alice g_ab ->  1159\n",
-      "Bob g_ba ->  1159\n"
+      "1627 3\n",
+      "Alice: g_a ->  119\n",
+      "Bob: g_b ->  744\n",
+      "Alice g_ab ->  974\n",
+      "Bob g_ba ->  974\n"
      ]
     }
    ],
@@ -236,21 +238,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-07T17:21:47.648398Z",
-     "start_time": "2024-01-07T17:21:47.645270Z"
+     "end_time": "2024-01-08T01:25:14.120290Z",
+     "start_time": "2024-01-08T01:25:14.116883Z"
     }
    },
    "id": "f5aab2e5fdeb2152",
-   "execution_count": 5
+   "execution_count": 11
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-08T01:25:14.120582Z",
+     "start_time": "2024-01-08T01:25:14.118864Z"
+    }
    },
-   "id": "e82e22eb0783232b"
+   "id": "e82e22eb0783232b",
+   "execution_count": 11
   }
  ],
  "metadata": {
