wrap up ECC demonstration

--- a/notebooks/EllipticCurveCryptography.ipynb
+++ b/notebooks/EllipticCurveCryptography.ipynb
@@ -64,7 +64,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(-2.56  -   0.4720000000000004)\n"
+      "(1.077486403391414  -   -3.0415352829993516)\n"
      ]
     }
    ],
@@ -105,20 +105,118 @@
     "        \n",
     "        return Point(x3, y3)\n",
     "    \n",
+    "    # Double and Add Algorithm\n",
+    "    # O(m) where m is the number of bits in k\n",
+    "    def double_and_add(self, k: int, P: Point):\n",
+    "        # Convert k to binary\n",
+    "        k = bin(k)[3:]\n",
+    "        \n",
+    "        # Initialize R\n",
+    "        R = Point(P.x, P.y)\n",
+    "        \n",
+    "        # For each bit in k from left to right\n",
+    "        for bit in k:\n",
+    "            # R = 2R\n",
+    "            R = self.point_addition(R, R)\n",
+    "            \n",
+    "            # If the bit is 1, then R = R + P\n",
+    "            if bit == '1':\n",
+    "                R = self.point_addition(R, P)\n",
+    "                \n",
+    "        return R\n",
     "    \n",
-    "print(SimpleEllipticCurve(0, 7).point_addition(Point(2, 5), Point(2, 5)))\n",
+    "    \n",
+    "ecc = SimpleEllipticCurve(0, 7)\n",
+    "P = Point(2, 4)\n",
+    "print(ecc.double_and_add(21, P))\n",
     "    \n",
     "    "
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-08T01:24:55.470989Z",
-     "start_time": "2024-01-08T01:24:55.468093Z"
+     "end_time": "2024-01-08T18:59:04.419743Z",
+     "start_time": "2024-01-08T18:59:04.416555Z"
     }
    },
    "id": "f2a31882d2c77522",
-   "execution_count": 1
+   "execution_count": 2
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Double and Add Algorithm\n",
+    "In elliptic curve cryptography, the double and add algorithm is used to calculate $kP$ where $k$ is a scalar and $P$ is a point on the curve. The algorithm is as follows:\n",
+    " - Convert $k$ to binary\n",
+    " - Initialize $R = \\mathcal{O}$\n",
+    " - For each bit in $k$ from left to right:\n",
+    "  - $R = 2R$\n",
+    "  - If the bit is $1$, then $R = R + P$\n",
+    " - Return $R$"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "42db1ed9ab0ef0f3"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5.972713090756081  -   -14.8683017134625)\n",
+      "(5.9727189164285726  -   -14.868322679815325)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Elliptic Curve Cryptography Diffie-Hellman Key Exchange\n",
+    "import random\n",
+    "\n",
+    "generator = Point(2, 4)\n",
+    "\n",
+    "alice_random = random.randint(2, 1e4)\n",
+    "bob_random = random.randint(2, 1e4)\n",
+    "\n",
+    "# public keys with double and add\n",
+    "alice_public_key = ecc.double_and_add(alice_random, generator)\n",
+    "bob_public_key = ecc.double_and_add(bob_random, generator)\n",
+    "\n",
+    "# shared secret with double and add\n",
+    "alice_shared_secret = ecc.double_and_add(alice_random, bob_public_key)\n",
+    "bob_shared_secret = ecc.double_and_add(bob_random, alice_public_key)\n",
+    "\n",
+    "print(alice_shared_secret)\n",
+    "print(bob_shared_secret)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-08T18:59:04.426567Z",
+     "start_time": "2024-01-08T18:59:04.421533Z"
+    }
+   },
+   "id": "670c273e88f71bfc",
+   "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-08T18:59:04.428861Z",
+     "start_time": "2024-01-08T18:59:04.425216Z"
+    }
+   },
+   "id": "61f769de3b872672",
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -127,12 +225,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-08T01:24:55.473398Z",
-     "start_time": "2024-01-08T01:24:55.471628Z"
+     "end_time": "2024-01-08T18:59:04.430974Z",
+     "start_time": "2024-01-08T18:59:04.428509Z"
     }
    },
-   "id": "da5ad2b80f2f4c9c",
-   "execution_count": 1
+   "id": "42fd3fe0087d1b7d",
+   "execution_count": 3
   }
  ],
  "metadata": {
